[build-system]
requires = ["uv-build>=0.7"]
build-backend = "uv_build"

[project]
name = "TimeSeAD"
version = "0.0.2"
description = "TimeSeAD - Library for Benchmarking Multivariate Time Series Anomaly Detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

authors = [
  { name = "Dennis Wagner", email = "dwagner@cs.uni-kl.de" },
  { name = "Tobias Michels", email = "tmichels@cs.uni-kl.de" },
  { name = "Florian C.F. Schulz", email = "florian.cf.schulz@tu-berlin.de" },
  { name = "Arjun Nair", email = "naira@rptu.de" },
]

keywords = [
  "time series anomaly detection",
  "anomaly detection",
  "time series",
  "benchmark",
]

dependencies = [
  "matplotlib>=3.3",
  "numpy<2.4.0",
  "scikit-learn>=0.24.2",
  "tqdm>=4.59",
  "pandas>=1.2",
  "torch>=2.6",
  "torchvision>=0.2.2",
  "torch-geometric",
  "opt_einsum",
  #"torch-cluster @ git+https://github.com/rusty1s/pytorch_cluster.git", # build separately
  "pyreadr",
  "pyod",
  "einops",
  # "treeple", # For now we need to build from source (please refer to README.md)
]

[project.optional-dependencies]
extensions = [
  "timesead-extensions @ git+https://github.com/denix56/TimeSeAD-extensions.git"
]
experiments = [
  "pymongo>=3.12",
  "sacred>=0.8",
]
docs = [
  "sphinx>=6.1",
  "sphinx-autoapi>=2.1",
  "myst-parser>=1.0",
  "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/denix56/TimeSeAD"

[tool.uv.build-backend]
module-name = ["timesead", "timesead_experiments"]
module-root = ""

